# filecoin-ffi

./: bls.go  filcrypto.h  go.mod  proofs.go
cgoleakdetect/: runner.go
rust/: CMakeLists.txt  Cargo.toml  filcrypto.pc
rust/cmake/: CMakeDetermineRustCompiler.cmake  CMakeRustInformation.cmake  FindRust.cmake
rust/src/: lib.rs
rust/src/proofs/: api.rs  helpers.rs
rust/src/util/: mod.rs  rpc.rs
