#[package]
#name = "filcrypto"
#description = "FFI Interface to Filecoin Proofs"
#version = "0.7.4"
#authors = ["laser <l@s3r.com>"]
#license = "MIT OR Apache-2.0"
#repository = "https://github.com/filecoin-project/filecoin-ffi"
#readme = "README.md"
#edition = "2018"
#publish = false


#yst correct
[package]
name = "filcrypto"
description = "FFI Interface to Filecoin Proofs"
version = "0.7.4"
authors = ["YST-GG <1964937517@qq.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
publish = false

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
bls-signatures = "0.6.0"
byteorder = "1.2"
drop_struct_macro_derive = "0.4.0"
ff = { version = "0.2.1", package = "fff" }
ffi-toolkit = "0.4.0"
libc = "0.2.58"
log = "0.4.7"
paired = "0.20.0"
fil_logger = "0.1.0"
rand = "0.7"
rand_chacha = "0.2.1"
serde = "^1.0"
rayon = "1.2.1"
anyhow = "1.0.23"
lazy_static = "^1.4"
bellperson = { version = "0.9.2", features = ["gpu"] }
serde_json = "1.0.46"
reqwest = { version = "^0.10", features = ["blocking", "json"] }

[dependencies.filecoin-proofs-api]
package = "filecoin-proofs-api"
version = "4.0.2"


#yst correct
[profile.release]
lto = true



[build-dependencies]
cbindgen = "= 0.14.0"

[dev-dependencies]
tempfile = "3.0.8"


#yst correct
[dependencies.filecoin-api]
git = "https://github.com/YST-GG/filecoin-api"
rev = "fa1e979"
